--- a/Kernel/configs/surya.config.json
+++ b/Kernel/configs/surya.config.json
@@ -2,12 +2,20 @@
   {
     "kernelSource": {
       "name": "Mi6X",
-      "repo": "https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne",
-      "branch": "TDA",
-      "device": "wayne",
-      "defconfig": "vendor/wayne_defconfig"
+      "repo": "https://github.com/LineageOS/android_kernel_xiaomi_surya",
+      "branch": "lineage-21",
+      "device": "surya",
+      "defconfig": "surya_defconfig"
     },
     "toolchains": [
+      {
+        "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3",
+        "branch": "lineage-21.0",
+        "name":"aarch64",
+        "binaryEnv": [
+          "bin"
+        ]
+      },
       {
         "repo": "https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b",
         "branch": "lineage-20.0",
