--- a/Kernel/configs/surya.config.json
+++ b/Kernel/configs/surya.config.json
@@ -1,7 +1,7 @@
 [
   {
     "kernelSource": {
-      "name": "Mi6X",
+      "name": "POCOX3",
       "repo": "https://github.com/LineageOS/android_kernel_xiaomi_surya",
       "branch": "lineage-21",
       "device": "surya",
@@ -20,14 +20,6 @@
         "repo": "https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b",
         "branch": "lineage-20.0",
         "name": "clang",
-        "binaryEnv": [
-          "bin"
-        ]
-      },
-      {
-        "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9",
-        "branch": "lineage-19.1",
-        "name": "aarch64",
         "binaryEnv": [
           "bin"
         ]
