--- a/.github/workflows/twrp.yml
+++ b/.github/workflows/twrp.yml
@@ -1,6 +1,5 @@
 name: Build TWRPs
 
-
 on:
   push:
     paths:
@@ -12,7 +11,7 @@ on:
 jobs:
   Read-configuration:
     name: ®️ Parse *.config.json
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       CONFIGS: ${{ steps.generate-matrix.outputs.CONFIGS }}
       BUILD_DATE: ${{ steps.generate-builddate.outputs.BUILDDATE }}
